deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: floodsight
  labels:
    app: floodsight
    component: frontend
spec:
  type: ClusterIP
  selector:
    app: floodsight
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
